reDesign of the website. Version 1.2

--- a/About/About3.html
+++ b/About/About3.html
@@ -408,10 +408,10 @@
             <p>Jcc Usa</p>
         </div>
         <ul class="menu-links">
-          <li><a href ="/About/About3.html" class ="active"> About Us </a></li>
-          <li><a href ="/i.html"> Events </a></li>
-          <li><a href ="../Gallery/Gallery.html"> Gallery </a></li>
-          <li><a href ="../Contact/c.html"> Contact Us  </a></li>
+            <li><a href ="#" class ="active"> About Us </a></li>
+            <li><a href ="/i.html"> Events </a></li>
+            <li><a href ="../Gallery/Gallery.html"> Gallery </a></li>
+            <li><a href ="../Contact/c.html"> Contact Us  </a></li>
         </ul>
     </div>
     
@@ -424,7 +424,7 @@
             
             <div class="nav-center-container">
                 <ul class ="nav-links">
-                    <li><a href ="/About/About3.html" class ="active"> About Us </a></li>
+                    <li><a href ="#" class ="active"> About Us </a></li>
                     <li><a href ="/i.html"> Events </a></li>
                     <li><a href ="../Gallery/Gallery.html"> Gallery </a></li>
                     <li><a href ="../Contact/c.html"> Contact Us  </a></li>
