--- a/Merch/merch.html
+++ b/Merch/merch.html
@@ -117,6 +117,7 @@
       flex-wrap: wrap;
       gap: 10px;
       margin-top: 10px;
+
     }
 
     .timeline > div {
@@ -264,6 +265,10 @@
       line-height: 1.6;
     }
 
+    .r {
+      margin-left: 20px;
+    }
+
     /********** RESPONSIVENESS **********/
     @media (max-width: 1024px) {
       .navbar {
@@ -338,6 +343,7 @@
       .timeline > div {
         font-size: 0.75rem;
       }
+
     }
   </style>
 </head>
@@ -411,7 +417,7 @@
         />
         <h3>African Fabric</h3>
         <p>$35</p>
-        <div class="timeline">
+        <div class="timeline r ">
           <div>S</div>
           <div>M</div>
           <div>L</div>
@@ -439,7 +445,7 @@
         />
         <h3>Signature T-Shirt</h3>
         <p>$30</p>
-        <div class="timeline">
+        <div class="timeline r">
           <div class="green">S</div>
           <div>M</div>
           <div>L</div>
@@ -467,7 +473,7 @@
         />
         <h3>Cozy Hoodie</h3>
         <p>$55</p>
-        <div class="timeline">
+        <div class="timeline r ">
           <div>S</div>
           <div>M</div>
           <div class="gray">L</div>
