--- a/footer.html
+++ b/footer.html
@@ -65,7 +65,7 @@
 <body>
     <footer>
         <div class="footerContainer1">
-            <img src="images/logojccnew.png" alt="JCC logo">
+            <img src="./images/urora.png.PNG" alt="JCC logo">
             <h3>JCC USA NATIONAL COMMITTEE</h3>
         </div>
         <div class="footerContainer">
