--- a/Header/header.html
+++ b/Header/header.html
@@ -50,17 +50,23 @@
             cursor: pointer;
         }
 
-
-        .header-class{
-            height:100%;
-            width: 10%;
-            margin-top:10px;
+        .header-class {
+            height: 100%; 
+            width: 350px; 
+            display: flex; 
+            align-items: center; 
+            flex-shrink: 0; 
+            padding-right: 5px; 
         }
-        .header-class img{
-            height:80%;
-            width:100%;
-            object-fit: cover;
-            object-position: center;;
+        
+        .header-class img {
+            height: 100%; 
+            width: 70px; 
+            max-width: none; 
+            object-fit: contain; 
+            object-position: left; 
+            margin-right: 10px; 
+            cursor: pointer;
         }
         .header{
             width: 100%;
@@ -83,13 +89,11 @@
     <header>
         <nav class ="navbar">
             <div class="header-class">
-                <img src="../images/logojccnew 2.png">
+                <img src="../../images/urora.png.PNG">
             </div>
             <ul class ="nav-links">
-                <li><a href ="#"> Home </a></li>
                 <li><a href ="#"> About Us </a></li>
                 <li><a href ="#"> Pre-Sale Merch </a></li>
-                <li><a href ="#"> Countdown  </a></li>
                 <li><a href ="#"> Gallery </a></li>
                 <li><a href ="#"> Contact Us  </a></li>
             </ul>
